--- a/Semester_1/Web_Interface_Design/Final_Project/styles.css
+++ b/Semester_1/Web_Interface_Design/Final_Project/styles.css
@@ -205,6 +205,7 @@ section {
 
 
 
+
 #login-main {
     display: flex;
     justify-content: center;
@@ -215,12 +216,13 @@ section {
 
 #login-div1 {
     width: 350px;
-    height: 480px;
+    height: 450px;
     background-color: white;
     box-shadow: 0 0 30px black;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     position: relative;
 }
@@ -228,7 +230,7 @@ section {
 #login-divTop {
     width: 100%;
     /* background-color: red; */
-    padding: 10px 0;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -242,15 +244,14 @@ section {
 }
 
 #login-divTop h4 {
-    margin-top: 5px;
+    margin-top: 15px;
 }
-
 
 #login-divMid {
     display: flex;
     width: 280px;
     flex-direction: column;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
 
 .login-inputWrapper {
@@ -280,9 +281,9 @@ section {
 }
 
 .login-inputWrapper img {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
+    width: 30px;
+    height: 30px;
+    margin-right: 4px;
 }
 
 .login-inputWrapper input{
@@ -298,8 +299,8 @@ section {
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
-    padding: 5px 0px;
-    background-color: red;
+    padding: 10px 0px;
+    /* background-color: red; */
     white-space: nowrap;
     font-size: 14px;
 }
@@ -316,7 +317,7 @@ section {
 #login-bttn {
     margin-top: 10px;
     padding: 8px;
-    background-color: blue;
+    background-color: rgb(0, 81, 255);
     color: white;
     font-size: 22px;
     border: none;
@@ -326,9 +327,14 @@ section {
 
 #login-divBot {
     width: 100%;
-    padding: 10px 50px 10px 0;
-    background-color: green;
-    text-align: right;
+    padding: 20px 0;
+    background-color: lightgray;
+    border-radius: 0 0 5px 5px;
+    text-align: left;
+}
+
+#login-divBot label {
+    margin-left: 20px;
 }
 
 #login-divBot a {
@@ -337,5 +343,198 @@ section {
 }
 
 #login-divBot a:hover{
+    color: blue;
+}
+
+
+
+
+
+
+#regis-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(45deg, rgb(255,0,142), rgb(0, 155, 255));
+}
+
+#regis-div1 {
+    width: 420px;
+    height: 740px;
+    background-color: white;
+    box-shadow: 0 0 30px black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+#regis-divTop {
+    width: 100%;
+    /* background-color: red; */
+    /* padding: 1px 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+}
+
+#regis-divTop img {
+    width: 100px;
+    height: 100px;
+}
+
+#regis-divTop h4 {
+    font-size: 14px;
+}
+
+#regis-divMid {
+    display: flex;
+    width: 100%;
+    /* width: 280px; */
+    flex-direction: column;
+    margin-top: 4px;
+    /* background-color: yellow; */
+}
+
+#regis-divMid h4 {
+    color: blue;
+    text-align: center;
+    padding: 4px 0;
+    font-size: 14px;
+}
+
+.regis-div2 {
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 1px;
+    /* gap: 50px; */
+    /* background-color: red; */
+}
+
+.regis-inputWrapper {
+    display: flex;
+    align-items: center;
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 1px;
+    transition: border 0.3s ease;
+    /* background-color: green; */
+}
+
+.regis-div2 .regis-inputWrapper {
+    padding: 1px 11px;
+}
+
+.regis-inputWrapper:focus-within {
+    box-shadow: 0 0 6px blue;
+    border-color: blue;
+}
+
+.regis-inputWrapper img {
+    width: 25px;
+    height: 25px;
+    margin-right: 4px;
+}
+
+.regis-inputWrapper input{
+    width: 100%;
+    border: none;
+    outline: none;
+    flex: 1;
+    padding: 6px;
+    font-size: 12px;
+}
+
+.regis-div3 {
+    /* width: 100%; */
+    /* display: flex; */
+    /* justify-content: space-around; */
+    padding: 5px 10px;
+    /* background-color: red; */
+}
+
+#regis-div4 {
+    display: flex;
+    /* width: 100%; */
+    flex-direction: column;
+    margin: 4px 10px;
+    /* background-color: green; */
+    border: 1px solid gray;
+    border-radius: 3px;
+}
+
+#regis-div5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0;
+    gap: 10px;
+    background-color: rgb(255, 170, 170);
+    border-bottom: 1px solid gray;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+#regis-div5 img {
+    width: 20px;
+}
+
+#regis-div5 h5 {
+    color: red;
+}
+
+#regis-div4 label {
+    text-align: center;
+    color: lightgray;
+    font-size: 10px;
+    padding: 10px;
+}
+
+#regis-div4 label a {
+    text-align: center;
+    color: rgb(74, 201, 255);
+    text-decoration: none;
+}
+
+#regis-div4 label a:hover {
+    color: blue;
+}
+
+
+#regis-bttn {
+    /* margin-top: 10px; */
+    margin: 0 10px 4px 10px;
+    padding: 8px;
+    background-color: rgb(0, 81, 255);
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+#regis-divBot {
+    width: 100%;
+    padding: 12px 0;
+    background-color: lightgray;
+    border-radius: 0 0 5px 5px;
+    text-align: left;
+}
+
+#regis-divBot label {
+    margin-left: 20px;
+}
+
+#regis-divBot a {
+    color: black;
+    text-decoration: none;
+}
+
+#regis-divBot a:hover{
     color: blue;
 }
